P0 gap items: BFF rest clients, scheme catalog, webhook dispatcher, orchestrated payments
Implements the four P0 items from the PRD/use-case audit gap plan. Each affected
module's test suite is green (ops-partner-bff 181, notification-webhook 66,
payment-executor 56, config-registry scheme-catalog test).

P0-1 ops-partner-bff: real RestTransactionMgmtClient + RestSettlementClient, gated
  @ConditionalOnProperty gmepay.{transaction-mgmt,settlement-reconciliation}.client=rest
  and mutually exclusive with the now-conditional stubs. Map GET /v1/transactions
  and GET /v1/settlements onto the BFF view models. Revenue-rest deferred to P1
  (revenue-ledger GET /v1/revenue is per-numeric-partner only and returns zeros
  until ingestion lands; BFF holds partner codes). + MockRestServiceServer tests.

P0-3 config-registry: GET /v1/schemes supported-scheme catalog (controller + service
  + DTO; ZEROPAY ACTIVE, Phase-2 corridor schemes PLANNED) defined locally (no
  backwards dep on the BFF). BFF RestConfigRegistryClient.listSchemes() wired to it.
  + standalone MockMvc test.

P0-4 notification-webhook: concrete RestWebhookHttpClient (RestClient transport,
  bounded timeouts, never throws) + @Scheduled WebhookDispatcher that drains PENDING
  rows, resolves the real partner endpoint, advances the row in place
  (DELIVERED / retry-with-RetryPolicy-backoff / DLQ). Endpoint + signing secret behind
  a WebhookTargetResolver port (config-backed dev stand-in; Vault is the documented
  prod seam, audit P1). Gated gmepay.webhook.dispatcher.enabled (off by default).
  + transport + dispatcher unit tests.

P0-2 payment-executor: ClientBeans switched to the 7-arg PaymentOrchestrator so
  settlement booking (step 6) and the revenue rounding-residual post (step 8) run
  instead of being null-skipped. POST /v1/payments idempotency check/write (replay on
  a repeated Idempotency-Key). Partner type resolved from config-registry by partner
  code (X-Partner-Code header, X-Partner-Type fallback)